# addonmealie

./: .env.template  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  README_IMPORT_IA.md  README_STARTER_PACK.md  docker-compose.yml  install_mcp_mealie.sh  mcp_config_complete.json  mealie_mcp_complete.py  requirements.txt  test_parser_activated.py
.github/: dependabot.yml
addons/: README.md
addons/ingredient-price-collector/: .env.template  Dockerfile  README.md  docker-compose.coolify.yml  docker-compose.yml  pyproject.toml
addons/ingredient-price-collector/data/: coicop_mapping.json  price_bounds.json
addons/ingredient-price-collector/src/ingredient_price_collector/: api.py  config.py  importers.py  models.py  normalizer.py  storage.py
addons/ingredient-price-collector/src/ingredient_price_collector/collectors/: drive.py  insee_ipc.py  open_prices.py
addons/ingredient-price-collector/tests/: test_importers.py  test_normalizer.py  test_open_prices.py  test_storage.py
addons/mealie-budget-advisor/: .env.template  .gitignore  Dockerfile  README.md  docker-compose.coolify.yml  docker-compose.dev.yml  docker-compose.full.yml  docker-compose.yml  pyproject.toml
addons/mealie-budget-advisor/config/: .gitignore  .gitkeep
addons/mealie-budget-advisor/data/: .gitignore  .gitkeep
addons/mealie-budget-advisor/docs/: ARCHITECTURE.md
addons/mealie-budget-advisor/scripts/: README_GENERATE_WEIGHTS.md  generate_ingredient_weights.py  setup_mealie_integration.py
addons/mealie-budget-advisor/src/mealie_budget_advisor/: __init__.py  api.py  budget_extras.py  budget_manager.py  cli.py  config.py  mealie_sync.py  orchestrator.py  recipe_extras.py  scheduler.py  setup.py  ui.py
addons/mealie-budget-advisor/src/mealie_budget_advisor/models/: __init__.py  budget.py  cost.py  pricing.py
addons/mealie-budget-advisor/src/mealie_budget_advisor/planning/: __init__.py  budget_aware_planner.py  budget_manager.py  budget_planner.py  budget_scorer.py
addons/mealie-budget-advisor/src/mealie_budget_advisor/pricing/: __init__.py  cost_calculator.py  ingredient_matcher.py  ingredient_parser.py  ingredient_weights.py  manual_pricer.py  mistral_parser.py  open_prices_client.py  price_cache.py  price_collector_client.py
addons/mealie-budget-advisor/tests/: __init__.py  test_budget_manager.py  test_cost_calculator.py  test_cost_sync.py  test_e2e.py  test_ingredient_matcher.py  test_ingredient_parser.py  test_manual_pricer.py  test_models.py  test_orchestrator_sync.py  test_planner.py  test_recipe_extras.py
addons/mealie-import-orchestrator/: .env.template  Dockerfile  README.md  docker-compose.coolify.yml  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
addons/mealie-import-orchestrator/scripts/: batch_import.py  scrape_marmiton_urls.py  setup_mealie_integration.py
addons/mealie-import-orchestrator/src/mealie_import_orchestrator/: __init__.py  api.py  cli.py  config.py  ingredient_cleaner.py  nutrition_mealie_sync.py  nutrition_orchestrator.py  orchestrator.py  setup.py  smoke_test.py  ui.py
addons/mealie-import-orchestrator/src/mealie_import_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
addons/mealie-import-orchestrator/src/mealie_import_orchestrator/models/: profile.py
addons/mealie-import-orchestrator/src/mealie_import_orchestrator/nutrition/: ai_estimator.py  cache.py  calculator.py  ingredient_parser.py  quantity_estimator.py
addons/mealie-import-orchestrator/tests/: README.md  test_cli_smoke.py
addons/mealie-import-orchestrator/tests/fixtures/: structured_recipe.json
addons/mealie-menu-orchestrator/: .env.template  .gitignore  DEPLOYMENT.md  Dockerfile  Dockerfile.ui  README.md  docker-compose.coolify.yml  launch_ui.py  pyproject.toml
addons/mealie-menu-orchestrator/src/mealie_menu_orchestrator/: __init__.py  api.py  config.py  orchestrator.py  storage.py  ui.py
addons/mealie-menu-orchestrator/src/mealie_menu_orchestrator/clients/: __init__.py  budget_client.py  mealie_client.py  nutrition_client.py
addons/mealie-menu-orchestrator/src/mealie_menu_orchestrator/models/: __init__.py  menu.py
addons/mealie-menu-orchestrator/src/mealie_menu_orchestrator/scoring/: __init__.py  combined_scorer.py
addons/mealie-menu-orchestrator/tests/: __init__.py  test_api.py
addons/mealie-nutrition-advisor/: .env.template  .gitignore  DEPLOYMENT.md  Dockerfile  FEATURE_FLAGS.md  README.md  docker-compose.coolify.yml  docker-compose.yml  pyproject.toml
addons/mealie-nutrition-advisor/config/: household_profiles.json  seasonal_calendar.json
addons/mealie-nutrition-advisor/data/: __init__.py
addons/mealie-nutrition-advisor/data/drafts/: .gitkeep
addons/mealie-nutrition-advisor/scripts/: setup_mealie_integration.py
addons/mealie-nutrition-advisor/src/mealie_nutrition_advisor/: __init__.py  api.py  config.py  mealie_sync.py  orchestrator.py  setup.py  ui.py
addons/mealie-nutrition-advisor/src/mealie_nutrition_advisor/api_routes/: __init__.py  menu_drafting.py
addons/mealie-nutrition-advisor/src/mealie_nutrition_advisor/menu_drafting/: __init__.py  alternatives_finder.py  draft_manager.py
addons/mealie-nutrition-advisor/src/mealie_nutrition_advisor/models/: __init__.py  menu.py  menu_draft.py  nutrition.py  profile.py  seasonality.py
addons/mealie-nutrition-advisor/src/mealie_nutrition_advisor/nutrition/: ai_estimator.py  calculator.py  ingredient_parser.py  mistral_rate_limiter.py  off_rate_limiter.py  open_food_facts.py  quantity_estimator.py  usda_client.py
addons/mealie-nutrition-advisor/src/mealie_nutrition_advisor/planner/: __init__.py  allergy_filter.py  history_tracker.py  planner.py  scorer.py  variety_scorer.py
addons/mealie-nutrition-advisor/src/mealie_nutrition_advisor/profiles/: manager.py
addons/mealie-nutrition-advisor/tests/: test_nutrition_calc.py  test_planner.py  test_profiles.py
complete_recipes/: nutrition_planner_data.json  recipe_database_premium.json  shopping_optimizer_data.json
data/: carbonara_marmiton.json  recipes.db  (+2 more)
(+264 files in other folders)
