[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mealie-budget-advisor"
version = "0.1.0"
description = "External addon for budget-aware meal planning and recipe cost estimation with Mealie"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "respx>=0.21.0"]

[project.scripts]
mealie-budget = "mealie_budget_advisor.cli:main"

[tool.setuptools.package-data]
mealie_budget_advisor = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
