[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mealie-import-orchestrator"
version = "0.5.10"
description = "External addon orchestrating the canonical Mealie import workflow with integrated nutrition analysis"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=0.20.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "streamlit>=1.34.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "mistralai>=0.0.0",
]

[project.optional-dependencies]
dev = ["httpx>=0.27.0", "pytest>=8.0.0"]

[project.scripts]
mealie-import-orchestrator = "mealie_import_orchestrator.cli:main"
mealie-addon-api = "mealie_import_orchestrator.api:start"
mealie-addon-ui = "mealie_import_orchestrator.ui:main"
smoke-test = "mealie_import_orchestrator.smoke_test:main"

[tool.setuptools.package-data]
mealie_import_orchestrator = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
