[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mealie-nutrition-advisor"
version = "1.0.1"
description = "External addon for nutritional analysis and meal planning with Mealie"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.20.0"]
mistral = ["mistralai>=1.0.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "respx>=0.21.0"]

[project.scripts]
mealie-nutrition = "mealie_nutrition_advisor.orchestrator:main"

[tool.setuptools.package-data]
mealie_nutrition_advisor = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
